--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,18 @@ before_install:
   - docker build  -t udagram-frontend ./Projects/Lession3/udagram-frontend
   - docker build  -t udagram-reverseproxy ./Projects/Lession3/udagram-reverseproxy
 ## Tagging
-  - docker tag udagram-api-feed toandm9/udagram-api-feed:v1
-  - docker tag udagram-api-user toandm9/udagram-api-user:v1
-  - docker tag udagram-frontend toandm9/udagram-frontend:v1
-  - docker tag udagram-reverseproxy toandm9/udagram-reverseproxy:v1
+  - docker tag udagram-api-feed daominhtoan09/udagram-api-feed:v1
+  - docker tag udagram-api-user daominhtoan09/udagram-api-user:v1
+  - docker tag udagram-frontend daominhtoan09/udagram-frontend:v1
+  - docker tag udagram-reverseproxy daominhtoan09/udagram-reverseproxy:v1
 ## Do similar for other three images```
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push udagram-api-feed:v1
-  - docker push udagram-api-user:v1
-  - docker push udagram-frontend:v1
-  - docker push udagram-reverseproxy:v1
+  - docker push daominhtoan09/udagram-api-feed:v1
+  - docker push daominhtoan09/udagram-api-user:v1
+  - docker push daominhtoan09/udagram-frontend:v1
+  - docker push daominhtoan09/udagram-reverseproxy:v1
 ## Do similar for other three images
 ## test
