--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
   - 16
-sudo: required
 services:
   - docker
 
@@ -19,7 +18,7 @@ before_install:
 ## Do similar for other three images```
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
-after_success:
+script:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push daominhtoan09/udagram-api-feed:v1
   - docker push daominhtoan09/udagram-api-user:v1
