--- a/Projects/Lession3/udagram-api-user/k8s/env-secret.yaml
+++ b/Projects/Lession3/udagram-api-user/k8s/env-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   name: secret-env-value
 stringData:
-  POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: MTIzNDU2Nzg=
+  test: test
+  # POSTGRES_USERNAME: cG9zdGdyZXM=
+  # POSTGRES_PASSWORD: YTEyMzQ1Njc4
   # the data is abbreviated in this example
