--- a/Projects/Lession3/docker-compose-build.yaml
+++ b/Projects/Lession3/docker-compose-build.yaml
@@ -6,12 +6,32 @@ services:
     image: udagram-api-user
     extra_hosts: 
       - host.docker.internal:host-gateway
+    environment:
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION 
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   backend_feed:
     build:
       context: ./udagram-api-feed
     image: udagram-api-feed
     extra_hosts: 
       - host.docker.internal:host-gateway
+    environment:
+      POSTGRES_USERNAME: $POSTGRES_USERNAME
+      POSTGRES_PASSWORD: $POSTGRES_PASSWORD 
+      POSTGRES_DB: $POSTGRES_DB 
+      POSTGRES_HOST: $POSTGRES_HOST
+      AWS_REGION: $AWS_REGION 
+      AWS_PROFILE: $AWS_PROFILE 
+      AWS_BUCKET: $AWS_BUCKET
+      JWT_SECRET: $JWT_SECRET
+      URL: "http://localhost:8100"
   frontend:
     build:
       context: ./udagram-frontend
