--- a/Projects/Lession3/udagram-api-feed/k8s/configMap.yaml
+++ b/Projects/Lession3/udagram-api-feed/k8s/configMap.yaml
@@ -11,4 +11,6 @@ data:
   AWS_BUCKET: toandm9-bucket
   URL: localhost:8080
   JWT_SECRET: dG9hbmRtOWFhc2xqZmxzZGpsc2psZmpzZGxrZmpqYWxrZHNmamxrYXNkamZsa3NkYQ==
+  POSTGRES_USERNAME: postgres
+  POSTGRES_PASSWORD: a12345678
   # the data is abbreviated in this example
