--- a/Projects/Lession3/udagram-api-feed/k8s/env-secret.yaml
+++ b/Projects/Lession3/udagram-api-feed/k8s/env-secret.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret-env-value
-stringData:
-  POSTGRES_USERNAME: postgres
-  POSTGRES_PASSWORD: MTIzNDU2Nzg=
+data:
+  test: test
+  # POSTGRES_USERNAME: cG9zdGdyZXM=
+  # POSTGRES_PASSWORD: YTEyMzQ1Njc4
   # the data is abbreviated in this example
