--- a/Projects/Lession3/udagram-reverseproxy/k8s/service.yaml
+++ b/Projects/Lession3/udagram-reverseproxy/k8s/service.yaml
@@ -5,8 +5,10 @@ metadata:
   labels:
     run: udagram-reverseproxy
 spec:
+  selector:
+    app: udagram-reverseproxy
+  type: LoadBalancer
   ports:
   - port: 8080
+    targetPort: 8080
     protocol: TCP
-  selector:
-    run: udagram-reverseproxy
