--- a/Projects/Lession3/udagram-reverseproxy/k8s/deployment.yaml
+++ b/Projects/Lession3/udagram-reverseproxy/k8s/deployment.yaml
@@ -13,9 +13,14 @@ spec:
     metadata:
       labels:
         app: udagram-reverseproxy
-    spec:
+    spec:      
       containers:
       - name: udagram-reverseproxy
         image: daominhtoan09/udagram-reverseproxy:v2.18
         ports:
         - containerPort: 8080
+        resources:
+          limits:
+            cpu: 500m
+          requests:
+            cpu: 200m
